--- a/about.html
+++ b/about.html
@@ -64,7 +64,6 @@
   background-color: #2E4F7A;
    transform: translateX(-50%); /* centrăm linia */
   transition: width 0.4s ease, left 0.4s ease;
-  transform: translateX(-50%); /* centrăm linia */
 }
 .navlinks a:hover::after {
   width: 100%; /* linia se intinde complet */
@@ -75,20 +74,18 @@
     font-family: "Zen Dots", sans-serif;
     font-size: 2rem;
     text-align: center;
-
     white-space: nowrap;
     overflow: hidden;
-
     width: 0;
     animation: typing 2s steps(22, end) forwards;
     animation-delay: 0.9s;
 }
 
-
 @keyframes typing {
     from { width: 0; }
     to { width: 24ch; }
 }
+
 h4{
         margin-top: 100px;
         color: white;
@@ -105,10 +102,8 @@ h4{
     font-family: "Zen Dots", sans-serif;
     font-size: 2rem;
     text-align: center;
-
     white-space: nowrap;
     overflow: hidden;
-
     width: 0;
     animation: typing 2s steps(22, end) forwards;
     animation-delay: 1.3s;
@@ -128,7 +123,7 @@ h4{
   text-align: center;
   margin-top: 250px;
 }
-/* -- Card original -- */
+
 .card-client {
   background: linear-gradient(145deg, #000000, #111111);
   width: 13rem;
@@ -138,37 +133,10 @@ h4{
   border-radius: 15px;
   text-align: center;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: "Zen Dots", sans-serif;
   transition: all 0.4s ease;
   position: relative;
   overflow: hidden;
-}
-
-.card-client::before {
-  content: '';
-  position: absolute;
-  top: -50%;
-  left: -50%;
-  width: 200%;
-  height: 200%;
-  background: linear-gradient(120deg, #2E4F7A, #7cdacc, #2E4F7A, #7cdacc);
-  background-size: 400% 400%;
-  transition: all 0.5s ease;
-  filter: blur(20px);
-  opacity: 0;
-  z-index: 0;
-  transform: rotate(0deg);
-}
-
-.card-client:hover::before {
-  opacity: 0.4;
-  animation: gradientShift 3s linear infinite;
-}
-
-@keyframes gradientShift {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
 }
 
 .card-client:hover {
@@ -177,17 +145,10 @@ h4{
   border-color: #2E4F7A;
 }
 
-.card-client * { position: relative; z-index: 1; }
-
-.user-picture svg { transition: transform 0.4s ease; width: 2.5rem; fill: currentColor; }
-.card-client:hover .user-picture svg { transform: rotate(-10deg) scale(1.2); }
-.name-client { margin: 20px 0 0; font-weight: 600; font-size: 18px; }
-.name-client span { display: block; font-weight: 200; font-size: 16px; }
-
 .staff{ display: flex; flex-wrap: wrap; gap: 40px; align-items: center; justify-content: center; margin-top: 60px; }
 .staff-wrapper{ display: flex; justify-content: center; }
 
-/* -- Navigation logic -- */
+/* -- Navigation logic (copiat de la Home) -- */
 #menu-toggle { display: none; }
 .hamburger { display: none; flex-direction: column; cursor: pointer; gap: 5px; }
 .hamburger span { width: 25px; height: 3px; background: white; transition: 0.3s; }
@@ -205,19 +166,13 @@ h4{
     align-items: center;
     gap: 20px;
     padding: 20px 0;
-    
-    /* REPARAȚIA: Suprascriem animația ta originală care forța meniul deschis */
     animation: none; 
-    opacity: 0;
-    transform: translateY(-10px);
-    pointer-events: none;
-    transition: opacity 0.3s ease, transform 0.3s ease;
+    display: none;
+    z-index: 100;
   }
 
   #menu-toggle:checked ~ .navlinks {
-    opacity: 1;
-    transform: translateY(0);
-    pointer-events: auto;
+    display: flex;
   }
 }
 
@@ -253,9 +208,40 @@ h4{
 <h1>About NEXO Group</h1>
 <h3 id="typing-text"></h3>
 
+<h4>Nexo Group is a future-focused initiative designed to build, connect, and scale talent, teams, and ideas across multiple industries. <br>Current pillars include Esports and Creative, with room for future divisions.</h4>
+
+<div class="about">
+<h3>About Us</h3>
+<p>Nexo Esports is a German-based esports organization founded in 2025 as part of the broader Nexo Group <br>ecosystem. Built with a forward-thinking vision, Nexo Esports focuses on developing competitive talent, <br>fostering strong teams, and creating innovative opportunities within the esports industry.
+<br><br>
+As a core pillar of Nexo Group, the organization is driven by a mission to build, connect, and scale talent, <br>teams, and ideas across multiple industries. Alongside Esports, Nexo Group currently operates within the <br>Creative sector, with the flexibility to expand into additional divisions in the future.
+<br><br>
+Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a sustainable and <br>influential presence in modern esports by combining competition, creativity, and long-term growth.</p>
+</div>
+
+<h2 style="color: white; font-family: 'Zen Dots'; text-align: center; margin-top: 150px;">NEXO Staff</h2>
+
+<div class="staff-wrapper">
+    <div class="staff">
+        <div class="card-client">
+            <p class="name-client"> KINGBOSSALI22 <span>Owner</span></p>
+        </div>
+        <div class="card-client">
+            <p class="name-client"> Osiris <span>Co Owner</span></p>
+        </div>
+        <div class="card-client">
+            <p class="name-client"> Lamine <span>Co Owner</span></p>
+        </div>
+    </div>
+</div>
+
+<footer>
+  &copy; 2025 NEXO Group. All rights reserved.
+</footer>
+
 <script>
 const texts = ["Our Vision", "Our Mission", "Our Future"];
-let index = 0;
+let textIndex = 0;
 const el = document.getElementById('typing-text');
 
 function typeWriter(text, i = 0) {
@@ -264,41 +250,17 @@ function typeWriter(text, i = 0) {
     setTimeout(() => typeWriter(text, i+1), 100);
   } else {
     setTimeout(() => {
-      index = (index + 1) % texts.length;
-      typeWriter(texts[index]);
+      textIndex = (textIndex + 1) % texts.length;
+      typeWriter(texts[textIndex]);
     }, 2000);
   }
 }
-typeWriter(texts[index]);
+typeWriter(texts[textIndex]);
 
 window.addEventListener('scroll', () => {
   const scrollPercent = (window.scrollY / (document.documentElement.scrollHeight - window.innerHeight)) * 100;
   document.getElementById('progress-bar').style.width = scrollPercent + '%';
 });
 </script>
-
-<h4>Nexo Group is a future-focused initiative designed to build, connect, and scale talent, teams, and ideas across multiple industries. <br>Current pillars include Esports and Creative, with room for future divisions.</h4>
-
-<div class="about">
-<h3>About Us</h3>
-<p>Nexo Esports is a German-based esports organization founded in 2025 as part of the broader Nexo Group ecosystem. <br>Built with a forward-thinking vision, Nexo Esports focuses on developing competitive talent, <br>fostering strong teams, and creating innovative opportunities within the esports industry.</p>
-</div>
-
-<h2 style="color: white; font-family: 'Zen Dots'; text-align: center; margin-top: 150px;">NEXO Staff</h2>
-
-<div class="staff-wrapper">
-    <div class="staff">
-        <div class="card-client">
-            <div class="user-picture">
-                <svg viewBox="0 0 448 512"><path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"></path></svg>
-            </div>
-            <p class="name-client"> KINGBOSSALI22 <span>Owner</span></p>
-        </div>
-        </div>
-</div>
-
-<footer>
-  &copy; 2025 NEXO Group. All rights reserved.
-</footer>
 </body>
 </html>
