--- a/about.html
+++ b/about.html
@@ -439,7 +439,7 @@ h4{
     left: 0;
     width: 100%;
     background: rgba(0,0,0,0.95);
-
+    display: none;
     flex-direction: column;
     align-items: center;
     gap: 20px;
@@ -456,6 +456,7 @@ h4{
     opacity: 1;
     transform: translateY(0);
     pointer-events: auto;
+      display: flex;
   }
 }
 #menu-toggle:checked + .hamburger span:nth-child(1) {
@@ -679,3 +680,4 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
