--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ h3 {
     font-family: "Zen Dots", sans-serif;
     font-size: 2rem;
     text-align: center;
-
+	
     white-space: nowrap;
     overflow: hidden;
 
@@ -361,6 +361,8 @@ footer{
 @media (max-width: 768px) {
   .typing-title {
     font-size: 1.5rem;
+	      white-space: normal; /* permite textului să meargă pe mai multe linii */
+    	  width: auto; 
     width: 18ch;
     animation: typing-mobile 2s steps(18, end) forwards;
   }
@@ -803,4 +805,5 @@ Coming Soon
 </footer>
 </body>
 </html>
+
 
