--- a/about.html
+++ b/about.html
@@ -366,7 +366,15 @@ h4{
     from { width: 0; }
     to { width: 14ch; }
   }
+  .about h3 {
+    font-size: 1.7rem;
+    animation: typing 2s steps(16, end) forwards;
+  }
 
+  @keyframes typing {
+    from { width: 0; }
+    to { width: 14ch; }
+  }
   h4,
   .about p {
     font-size: 0.85rem;
@@ -678,6 +686,7 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
 
 
