--- a/about.html
+++ b/about.html
@@ -623,7 +623,7 @@ typeWriter(texts[index]);
     <h4>Nexo Group is a future-focused initiative designed to build, connect, and scale talent, teams, and ideas
 across multiple industries. <br>Current pillars include Esports and Creative, with room for future divisions.</h4>
 <div class="about">
-<h3>About Us</h3>
+<h3>Who We Are</h3>
 <p>Nexo Esports is a German-based esports organization founded in 2025 as part of the broader Nexo Group <br>ecosystem. Built with a forward-thinking vision, Nexo Esports focuses on developing competitive talent, <br>fostering strong teams, and creating innovative opportunities within the esports industry.
 <br><br>
 As a core pillar of Nexo Group, the organization is driven by a mission to build, connect, and scale talent, <br>teams, and ideas across multiple industries. Alongside Esports, Nexo Group currently operates within the <br>Creative sector, with the flexibility to expand into additional divisions in the future.
@@ -686,6 +686,7 @@ Rooted in Germany and shaped by a global mindset, Nexo Esports aims to become a 
 </footer>
 </body>
 </html>
+
 
 
 
